project/stage/tests/accept/if_temp.ul
void main(){
  if(true){
    _doThing;
  }
}