project/stage/tests/reject/reject_global.ul
int notLegit;

void main(){
  int legit;
}